JWT middleware added
